--- a/com.ibm.cics.minibank.application.binding/.project
+++ b/com.ibm.cics.minibank.application.binding/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.ibm.cics.minibank.application.binding</name>
+	<name>com.ibm.cics.minibank.application.MINIPLAT.binding</name>
 	<comment></comment>
 	<projects>
 	</projects>
